# andreo

./: Cargo.toml  flake.nix
src/: lib.rs  main.rs
src/core/: camera_controll.rs  location.rs  mod.rs
src/input/: input.rs  mod.rs  mouse.rs
src/preference/: mod.rs  preference.rs
src/ui/: contmenu.rs  mod.rs  preferences.rs  quickmenu.rs  ui.rs
src/ui/preferences/: camera_controll.rs  camera_movement.rs  mod.rs  preferences.rs
src/util/: debug.rs  hash_map.rs  i18n.rs  mod.rs  ui.rs
