[package]
name = "andreo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = [] }
bevy_editor_pls = "0.9.0"
bevy_egui = "0.29.0"
bevy_mod_picking = "0.20.1"
derive = "1.0.0"
egui = "0.28.1"
log = "0.4.22"
num-traits = "0.2.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
